Ćwiczenie nr2  - Primefaces

--- a/KalkKred_02 primefaces/src/main/webapp/index.xhtml
+++ b/KalkKred_02 primefaces/src/main/webapp/index.xhtml
@@ -9,7 +9,7 @@
 	<title>Kalkulator kredytowy</title>
 </h:head>
 <h:body>
-	<p:panel header="Kalkulator kredytowy 01 - ziarno, formularz, parametry, nawigacja, messages">
+	<p:panel header="Kalkulator kredytowy 02 - Primefaces">
 	<h:form id="bla">
 		
 		<h:panelGrid id="grid" styleClass="ui-noborder" columns="3" celpadding="5">
